--- a/index.html
+++ b/index.html
@@ -18,5 +18,6 @@
     <div id="root"></div>
 
     <script src="/src/index.tsx" type="module"></script>
+    <script src="./node_modules/holderjs/holder.min.js"></script>
   </body>
 </html>
