Carousel sorta working (no slide)

--- a/index.html
+++ b/index.html
@@ -19,5 +19,12 @@
 
     <script src="/src/index.tsx" type="module"></script>
     <script src="./node_modules/holderjs/holder.min.js"></script>
+    <script>
+      Holder.addTheme("gray", {
+        bg: "#373940",
+        fg: "#948F84",
+        fontweight: "normal",
+      });
+    </script>
   </body>
 </html>
