--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
     <link rel="shortcut icon" type="image/ico" href="/src/assets/favicon.ico" />
-    <title>Solid App</title>
+    <title>Solid-Bootstrap</title>
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css"
       rel="stylesheet"
@@ -18,7 +18,7 @@
     <div id="root"></div>
 
     <script src="/src/index.tsx" type="module"></script>
-    <script src="./node_modules/holderjs/holder.min.js"></script>
+    <script src="https://unpkg.com/holderjs"></script>
     <script>
       Holder.addTheme("gray", {
         bg: "#373940",
