--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <div id="root"></div>
 
     <script src="/src/index.tsx" type="module"></script>
-    <script src="https://unpkg.com/holderjs"></script>
+    <script src="https://unpkg.com/holderjs@2.9.9/holder.js"></script>
     <script>
       Holder.addTheme("gray", {
         bg: "#373940",
